--- a/examples.html
+++ b/examples.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Numbrz - Product</title>
+    <title>Numbrz - Examples</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
@@ -13,15 +13,22 @@
     <div id="site-header">
       <div id="site-logo"></div>
       <nav>
-        <a href="index.html" class="active">Product</a>
-        <a href="examples.html">Examples</a>
+        <a href="index.html">Product</a>
+        <a href="examples.html" class="active">Examples</a>
         <a href="docs.html">Docs</a>
       </nav>
     </div>
 
     <div id="content-wrapper">
       <div id="content">
-        <h1>Product Features</h1>
+        <h1>Product Examples</h1>
+      </div>
+      <div id="sidebar-right">
+        <ul>
+          <li>Creating Functions</li>
+          <li>Connecting Data Sources</li>
+          <li>Creating Workflows</li>
+        </ul>
       </div>
     </div>
   </body>
