--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
   </head>
   <body>
-    <div id="site-header">
-      <div id="site-logo"></div>
-      <nav>
-        <a href="index.html" class="active">Product</a>
-        <a href="examples.html">Examples</a>
-        <a href="docs.html">Docs</a>
-      </nav>
+    <div id="header-wrapper">
+      <div id="header">
+        <div id="site-logo"></div>
+        <div id="nav">
+          <a href="index.html" class="active">Product</a>
+          <a href="examples.html">Examples</a>
+          <a href="docs.html">Docs</a>
+        </div>
+      </div>
     </div>
 
     <div id="content-wrapper">
