--- a/docs.html
+++ b/docs.html
@@ -32,6 +32,7 @@
 
     <div id="content-wrapper">
       <div id="content">
+        <h1>Welcome</h1>
         <h2 id="functions-anchor">Functions</h2>
         <h3>Overview</h3>
         <p>
